fix: adjust spacing and font size for improved layout in home component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,8 +29,8 @@
 .job{
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
-  font-size: 1.5rem !important;
-  margin-top: 0 !important;
+  font-size: 1.2rem !important;
+  margin-top: -0.5rem !important;
 }
 .input-search{
   font-family: 'Poppins', sans-serif;
